--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Install Flutter SDK
-      - uses: subosito/flutter-action@v2
+      #- uses: subosito/flutter-action@v2
         with:
           flutter-version: 'stable'  # You can specify a particular version if needed
 
