--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,44 +1,15 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Dart and Flutter
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-jobs:
-  build:
+on: push
+jobs: 
+  build-and-test: 
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout repository
-      - uses: actions/checkout@v4
-
-      # Install Flutter SDK
-      #- uses: subosito/flutter-action@v2
-        with:
-          flutter-version: 'stable'  # You can specify a particular version if needed
-
-      # Install Dart SDK (optional if you only need Flutter)
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
-
-      # Install dependencies using Flutter
-      - name: Install dependencies
-        run: flutter pub get
-
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
-
-      # Analyze the project source
-      - name: Analyze project source
-        run: dart analyze
-
-      # Run tests
-      - name: Run tests
-        run: dart test
+    - name: Clone repository
+      uses: actions/checkout@v4
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        channel: stable
+    # Get flutter packages
+    - run: flutter pub get
+    # Build :D 
+    - run: flutter build apk
