--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -2,14 +2,14 @@ on: push
 jobs: 
   build-and-test: 
     runs-on: ubuntu-latest
+        
     steps:
-    - name: Clone repository
-      uses: actions/checkout@v4
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: stable
-    # Get flutter packages
-    - run: flutter pub get
-    # Build :D 
-    - run: flutter build apk
+      - name: Clone repository
+        uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build web
