--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: diary
+name: dear_diary
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: '>=3.0.4 <4.0.0'
   flutter: '>=3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   intl: any
+  mongo_dart: ^0.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
