--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,11 @@
 allprojects {
+    ext.kotlin_version = "1.8.0"
     repositories {
         google()
         mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
