--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,13 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   intl: any
-  mongo_dart: ^0.9.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  table_calendar: ^3.0.9
+  
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
