--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   table_calendar: ^3.0.9
+  provider: ^6.0.5
+  shared_preferences: ^2.2.0
   
 dev_dependencies:
   hive_generator: ^2.0.1
