--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   get_it: ^8.0.3
   uuid: ^4.5.1
   bloc: ^9.0.0
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.0
   
 dev_dependencies:
   hive_generator: ^2.0.1
