--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bloc: ^9.0.0
   path_provider: ^2.1.2
   permission_handler: ^11.3.0
+  universal_html: ^2.2.4
   
 dev_dependencies:
   hive_generator: ^2.0.1
